# osrm-backend

./: .gitignore  .gitmodules  .pkg  CMakeLists.txt  package.json
eval/: osrm_eval.cpp
include/contractor/: graph_contractor.hpp
include/engine/: douglas_peucker.hpp  engine.hpp  geospatial_query.hpp
include/engine/api/: json_factory.hpp  multi_target_parameters.hpp  route_api.hpp  route_parameters.hpp  smooth_via_parameters.hpp
include/engine/datafacade/: internal_datafacade.hpp
include/engine/guidance/: assemble_overview.hpp
include/engine/map_matching/: hidden_markov_model.hpp
include/engine/plugins/: multi_target.hpp  plugin_base.hpp  smooth_via.hpp
include/engine/routing_algorithms/: multi_target.hpp  routing_base.hpp
include/extractor/: extraction_containers.hpp  extractor_callbacks.hpp  extractor_config.hpp  restriction_parser.hpp
include/extractor/guidance/: classification_data.hpp  motorway_handler.hpp  roundabout_handler.hpp  turn_handler.hpp
include/osrm/: multi_target_parameters.hpp  osrm.hpp  smooth_via_parameters.hpp
include/util/: coordinate.hpp  graph_loader.hpp  io.hpp  percent.hpp  range_table.hpp  static_rtree.hpp  typedefs.hpp  web_mercator.hpp
profiles/: bus.lua  foot.lua
src/engine/: engine.cpp
src/engine/api/: json_factory.cpp
src/engine/guidance/: assemble_overview.cpp  assemble_steps.cpp
src/engine/plugins/: multi_target.cpp  smooth_via.cpp  table.cpp
src/extractor/: edge_based_graph_factory.cpp  extraction_containers.cpp  extractor.cpp  extractor_callbacks.cpp  graph_compressor.cpp  restriction_parser.cpp  scripting_environment.cpp
src/osrm/: osrm.cpp
src/util/: simple_logger.cpp
unit_tests/util/: range_table.cpp  web_mercator.cpp
